{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 87,
  "lineage": "419f59ee-fd7e-ad74-6a0f-83d021967656",
  "resources": [
    {
      "module": "module.Subnet1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_pub_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:717372050716:subnet/subnet-086e552263e3aff90",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-086e552263e3aff90",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "717372050716",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet1"
            },
            "tags_all": {
              "Name": "Public Subnet1"
            },
            "vpc_id": "vpc-0e6c039ae73f000ef"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Subnet2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_pub_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:717372050716:subnet/subnet-0202d70cab392478a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0202d70cab392478a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "717372050716",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet2"
            },
            "tags_all": {
              "Name": "Public Subnet2"
            },
            "vpc_id": "vpc-0e6c039ae73f000ef"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Subnet3",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_pub_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:717372050716:subnet/subnet-0a3a899969d98513e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a3a899969d98513e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "717372050716",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet1"
            },
            "tags_all": {
              "Name": "Private Subnet1"
            },
            "vpc_id": "vpc-0e6c039ae73f000ef"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Subnet4",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_pub_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:717372050716:subnet/subnet-05eeeaaf8cd7def0c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05eeeaaf8cd7def0c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "717372050716",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet2"
            },
            "tags_all": {
              "Name": "Private Subnet2"
            },
            "vpc_id": "vpc-0e6c039ae73f000ef"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.igw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:717372050716:internet-gateway/igw-0f752e9f016af9a9f",
            "id": "igw-0f752e9f016af9a9f",
            "owner_id": "717372050716",
            "vpc_id": "vpc-0e6c039ae73f000ef"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.priasso1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-097c1e136852dec54",
            "route_table_id": "rtb-047fbf5559b1274d3",
            "subnet_id": "subnet-0a3a899969d98513e"
          },
          "dependencies": [
            "module.Subnet3.aws_subnet.my_pub_subnet",
            "module.prvrt.aws_route_table.my_pubrt",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.priasso2",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09464892205de169a",
            "route_table_id": "rtb-047fbf5559b1274d3",
            "subnet_id": "subnet-05eeeaaf8cd7def0c"
          },
          "dependencies": [
            "module.Subnet4.aws_subnet.my_pub_subnet",
            "module.prvrt.aws_route_table.my_pubrt",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prvrt",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_pubrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:717372050716:route-table/rtb-047fbf5559b1274d3",
            "id": "rtb-047fbf5559b1274d3",
            "owner_id": "717372050716",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e6c039ae73f000ef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pub_route",
      "mode": "managed",
      "type": "aws_route",
      "name": "my_pubroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f752e9f016af9a9f",
            "id": "r-rtb-0e82110ba8a100e4c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e82110ba8a100e4c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.igw.aws_internet_gateway.my_igw",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pubasso1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ae35fcc059bb9a57",
            "route_table_id": "rtb-0e82110ba8a100e4c",
            "subnet_id": "subnet-0202d70cab392478a"
          },
          "dependencies": [
            "module.Subnet2.aws_subnet.my_pub_subnet",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pubasso2",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a74ce7e8d35adf66",
            "route_table_id": "rtb-0e82110ba8a100e4c",
            "subnet_id": "subnet-086e552263e3aff90"
          },
          "dependencies": [
            "module.Subnet1.aws_subnet.my_pub_subnet",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].mumbai",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:717372050716:vpc/vpc-0e6c039ae73f000ef",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0aa371ddf7c0d4e65",
            "default_route_table_id": "rtb-0e82110ba8a100e4c",
            "default_security_group_id": "sg-0f8b8b03202992c30",
            "dhcp_options_id": "dopt-07d54e9e5511ed26d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e6c039ae73f000ef",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e82110ba8a100e4c",
            "owner_id": "717372050716",
            "tags": {
              "Name": "mumbaivpc"
            },
            "tags_all": {
              "Name": "mumbaivpc"
            }
          }
        }
      ]
    }
  ]
}